--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body{
 }
 
 .bio{
-    
+    text-align: justify;
+    text-justify: inter-word;
     position: absolute;
     width: 750px;
     height: 120px;
