--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 22px;
     padding-left: 25px;
     padding-right: 25px;
